package Router;

message CS_PRECONNECT {
    optional int32 cmd_id = 1 [default = 1];
    optional string host = 2;
    optional int32 port = 3;
}
message SC_PRECONNECT {
    optional int32 cmd_id = 1 [default = 2];
}